minor edits to tables

--- a/tex/ch3.tex
+++ b/tex/ch3.tex
@@ -83,26 +83,22 @@ decimal places.
 Note that the vessel volumes, $V_{m}$, are larger than the nominal volumes
 indicated in the `names' column.  The contents of the `names' column are
 treated as identifiers and are not used in any calculation.
-
-%TODO:
-\textbf{TODO: Alignment in table}
-
 \begin{table}[h!]
     \centering
     \caption{Vessel data for large-scale example}
     \label{tbl.vessel}
-    \begin{tabular}{l | c | c}
+    \begin{tabular}{l | r | r}
         names & volumes & costs\\
-        & $V_{m}$ (l) & $c_{m}$ (--)\\ \hline
-        2000 l & 2222 & 95.64\\
-        4000 l & 4444 & 144.96\\
-        5000 l & 5556 & 165.72\\
-        8000 l & 8889 & 219.71\\
-        10000 l & 11111 & 251.19\\
-        12000 l & 13333 & 280.23\\
-        15000 l & 16667 & 320.37\\
-        20000 l & 22222 & 380.73\\
-        25000 l & 27778 & 435.28\\
+        & $V_{m}$ (l) & $c_{m}$ (--)\\\hline
+        2000 l & 2222.0 & 95.64\\
+        4000 l & 4444.0 & 144.96\\
+        5000 l & 5556.0 & 165.72\\
+        8000 l & 8889.0 & 219.71\\
+        10000 l & 11111.0 & 251.19\\
+        12000 l & 13333.0 & 280.23\\
+        15000 l & 16667.0 & 320.37\\
+        20000 l & 22222.0 & 380.73\\
+        25000 l & 27778.0 & 435.28\\
     \end{tabular}
 \end{table}
 
