--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -39,7 +39,7 @@ subfigure}
 \usepackage{lineno}
 \usepackage[hyphens]{url}
 
-\usepackage{longtable,tabu}
+\usepackage{longtable,tabu,siunitx}
 \usepackage[hidelinks]{hyperref}
 \usepackage{doi}
 
