added function to generate explanatory plot

--- a/tex/ch3.tex
+++ b/tex/ch3.tex
@@ -198,3 +198,10 @@ more detail hereafter.
 \textbf{TODO: Describe parameters}
 
 \section{Output Data}\label{S.outputdata}
+
+\begin{figure}
+    \centering
+    \includegraphics[angle=0,scale=0.55]{./figures/explanatory.pdf}
+    \caption{Equipment Time Utilisation for a Single Buffer}
+    \label{fig.explanatory}
+\end{figure}
